--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -2,8 +2,7 @@
 
  
 footer {
-	background: $url_2 $color_splash_page no-repeat center bottom;
-	background-attachment: fixed;
+	background: $color_splash_page;
 	width: $size_100;
 	padding: 1em 0 4em;
 	section {
